# AeroScout_backend

./: .dockerignore  .env.example  .env.save-data.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DEPLOYMENT.md  DEVELOPMENT.md  Dockerfile  README-DEPLOY.md  analyze_data.sh  auto_deploy.sh  deploy.sh  docker-compose.prod.yml  docker-compose.yml  fix_permissions.sh  init-logs.sh  main_fastapi.py  manage.sh  nginx.conf  pyproject.toml  requirements.txt  rollback.sh  setup-ssl.sh  test_data_save.py  test_data_saving.py  test_flight_search.py  test_local_save.py  test_sse.html
.cunzhi-memory/: context.md  metadata.json  preferences.md
.github/workflows/: ci-cd.yml  ci.yml
data_analysis/: README.md
docs/: SUPABASE_AUTH_SETUP.md  supabase_deployment_guide.md
fastapi_app/: CLAUDE.md
fastapi_app/config/: logging_config.py  settings.py  supabase_config.py
fastapi_app/dependencies/: auth.py  permissions.py  quota_utils.py
fastapi_app/middleware/: __init__.py  performance.py
fastapi_app/models/: __init__.py  auth.py  common.py  flights.py  monitor.py  subscription.py
fastapi_app/prompts/: flight_processor_prompts_v2.py
fastapi_app/routers/: admin.py  auth.py  auth_supabase.py  flights.py  monitor.py  subscription.py
fastapi_app/security/: jwt.py
fastapi_app/services/: __init__.py  cache_service.py  (+15 more)
scripts/: README_AUTH_MIGRATION.md  admin_import_auth_users.py  auth_import.ps1  backfill_orphan_user.py  export-lock.ps1  export-lock.sh  export_auth_users.py  rollback_auth_users.ps1
ssl/: fullchain.pem  privkey.pem
supabase/: README.md  config.toml
(+21 files in other folders)
