[tool.poetry]
name = "ticketradar-backend"
version = "0.1.0"
description = "TicketRadar FastAPI backend (FastAPI + Supabase)"
authors = ["Your Team <dev@your-domain>"]
readme = "CLAUDE.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "0.115.14"
uvicorn = "0.35.0"
starlette = "0.46.2"
pydantic = "2.11.7"
pydantic-settings = "2.1.0"
email-validator = "2.2.0"
supabase = "2.16.0"
redis = "^5.0.0"
PyJWT = "2.10.1"
passlib = "1.7.4"
bcrypt = "4.3.0"
aiohttp = "3.12.13"
requests = "2.32.4"
smart-flights = "7.0.0"
loguru = "0.7.2"
python-dotenv = "1.1.1"
python-multipart = "0.0.20"
psutil = "7.0.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.7"
pytest = "^8.2.0"
pre-commit = "^3.7.0"

[tool.ruff]
target-version = "py312"
line-length = 120
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "logs",
    "data_analysis"
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501", "B008", "B904", "B025", "E722", "F811", "E402"]

[tool.ruff.lint.per-file-ignores]
"fastapi_app/config/__init__.py" = ["F403", "F401"]

[tool.ruff.format]
quote-style = "preserve"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
